--- a/WebContent/glossaire_html.html
+++ b/WebContent/glossaire_html.html
@@ -29,7 +29,6 @@
 	<p>
 		Tout document HTML doit obligatoirement comporter au minimum les balises suivantes :
 	</p>
-	
 	<table>
 		<tr>
 			<th>Balise</th>
@@ -39,6 +38,10 @@
 			<td>&lt;!DOCTYPE&gt;</td>
 			<td>L'inclusion du DOCTYPE dans un document HTML assure que le navigateur interprétera la version HTML ainsi déclarée. 
 				En HTML5 le doctype à déclarer est : &lt;!DOCTYPE html&gt;.</td>
+		</tr>
+		<tr>
+			<td>&lt;html&gt;</td>
+			<td>Déclaration du document HTML. Cette balise caractérise le contenu complet du document (entête et corps), c'est le conteneur haut niveau.</td>
 		</tr>
 		<tr>
 			<td>&lt;head&gt;</td>
@@ -51,7 +54,24 @@
 	</table>
 	
 	<h2>Les balises de l'entête</h2>
-	<p>Section en cours de préparation. Merci de revenir ultérieurement.</p>
+	<table>
+		<tr>
+			<th>Balise</th>
+			<th>Description</th>
+		</tr>
+		<tr>
+			<td>&lt;meta&gt;</td>
+			<td>Permet d'ajouter des métas à la page HTML. Ces données permettent de décrire certains aspects généralement techniques du document au navigateur. Hors mis le titre, ces informations ne seront pas affichées à l'écran.</td>
+		</tr>
+		<tr>
+			<td>&lt;link&gt;</td>
+			<td>Permet de lier une ressource externe à la page HTML(fichiers css, javascript, etc). Attention l'attribut "title" à une valeur sémantique différente.</td>
+		</tr>
+		<tr>
+			<td>&lt;title&gt;</td>
+			<td>Permet de donner un titre au document. C'est la seule information d'entête affichée par le navigateur à l'utilisateur. Elle se trouve sur l'onglet correspondant.</td>
+		</tr>
+	</table>
 	
 	<h2>Les balises du corps</h2>
 	<p>Section en cours de préparation. Merci de revenir ultérieurement.</p>
